# flaggy

./: .gitignore  Cargo.toml  README.md  shell.nix
flags/: big.yml  lucy.yml
src/: command_config.rs  main.rs  matrix_builder.rs
